Bug 88892 - Quanta crash when upload (or enter) is pressed more than once in the upload dialog
Summary: Quanta crash when upload (or enter) is pressed more than once in the upload d...
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandrake RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-09-05 17:35 UTC by Benjamin Bach
Modified: 2004-11-14 12:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Bach 2004-09-05 17:35:57 UTC
Version:            (using KDE KDE 3.2.2)
Installed from:    Mandrake RPMs
OS:                Linux

I'm able to reproduce this error with all kinds of consequence... whenever I press upload or (return) or (enter) Quanta will shut down. Luckily the only situation in which I upload my files is right after I've saved them =)


/Benjamin
Comment 1 András Manţia 2004-09-12 18:01:10 UTC
Hi,
 I cannot find a bug without a concrete testcase and a backtrace. Also 
your Quanta version would be good to know. If it's 3.2.x, I suggest to 
try 3.3.0. 3.2.x is not maintained anymore and we know that it is a 
little crashy...

Comment 2 Benjamin Bach 2004-09-13 19:15:07 UTC
Okay, sorry... I just read juring the bug report submission that adding your KDE version would be enough if the regarded program was in the same distro... uh well =)

I will update and do a backtrace or maybe just a better discription... if the bug's still dancing...


/Benjamin
Comment 3 András Manţia 2004-11-14 12:40:51 UTC
CVS commit by amantia: 

Disable Proceed button in the upload dialog once the upload is started. Fixes
various problems like non-responding Quanta after upload and possibly the
bug described in #88892.

BUG: 88892


  M +1 -0      projectupload.cpp   1.73.2.1


--- kdewebdev/quanta/project/projectupload.cpp  #1.73:1.73.2.1
@@ -348,4 +348,5 @@ void ProjectUpload::startUpload()
     uploadInProgress = true;
     suspendUpload = false;
+    buttonUpload->setEnabled(false);
     KURL u = *baseUrl;
     u.setPath(u.protocol() == "file" ? "/" : "");