Disable Proceed button in the upload dialog once the upload is started. Fixes various problems like non-responding Quanta after upload and possibly the bug described in #88892.

BUG: 88892